--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=VARUN-CHOWDARY-;Database=movieBookingDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
